# portfolio-media

./: .gitignore  .pre-commit-config.yaml  BADGES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  coverage.xml  pyproject.toml  pytest.ini
.claude-plugin/: plugin.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
assets/diagrams/: architecture.json
assets/reports/: portfolio_media_briefing.md
docs/: index.md
examples/: README.md  basic_usage.py
skill/: SKILL.md
src/portfolio_media/: __init__.py  assessment.py  cli.py  diagram_generator.py  logo_generator.py  prompt_builder.py  screenshot_capture.py  video_generator.py
src/portfolio_media/providers/: __init__.py  claude.py  gemini.py  glm.py  notebooklm.py  openrouter.py  perplexity.py
tests/: __init__.py  conftest.py  test_assessment.py  test_cli.py  test_diagram_generator.py  test_integration.py  test_logo_generator.py  test_main.py  test_prompt_builder.py  test_providers.py  test_screenshot_capture.py  test_video_generator.py
